--- a/Timer/Timer/MainWindow.xaml
+++ b/Timer/Timer/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Timer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
+        Title="Title"
         Icon="clock.ico"
         Height="303.5" 
         Width="411.5">
